RESOLVED FIXED50168
[chromium] try to enable WebCore compiler warnings on linux
https://bugs.webkit.org/show_bug.cgi?id=50168
Summary [chromium] try to enable WebCore compiler warnings on linux
Tony Chang
Reported 2010-11-29 11:56:26 PST
[chromium] try to enable WebCore compiler warnings on linux
Attachments
Patch (4.70 KB, patch)
2010-11-29 11:56 PST, Tony Chang
jamesr: review+
Tony Chang
Comment 1 2010-11-29 11:56:57 PST
Tony Chang
Comment 2 2010-11-29 12:00:14 PST
This passes for me on hardy in a debug build and seems to pass on the bots in release (all the warnings are in third party code): http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Linux/builds/2769/steps/compile/logs/stdio
James Robinson
Comment 3 2010-11-29 12:50:30 PST
Comment on attachment 75048 [details] Patch Go for it! I ran into completely nonsense-looking compile errors on the bots last time, so hopefully you'll have better luck.
Tony Chang
Comment 4 2010-11-29 13:23:03 PST
Tony Chang
Comment 5 2010-11-29 13:41:13 PST
Meh, turning warnings off. Here's the error: cc1plus: warnings being treated as errors WebCore/platform/Length.h: In constructor ‘WebCore::FillLayer::FillLayer(WebCore::EFillLayerType)’: WebCore/platform/Length.h:56: warning: ‘this.7’ is used uninitialized in this function WebCore/platform/Length.h:56: note: ‘this.7’ was declared here WebCore/platform/Length.h:56: warning: ‘this.7’ is used uninitialized in this function WebCore/platform/Length.h:56: note: ‘this.7’ was declared here make: *** [out/Release/obj.target/webcore_remaining/WebCore/rendering/style/FillLayer.o] Error 1 make: *** Waiting for unfinished jobs.... cc1plus: warnings being treated as errors WebCore/platform/graphics/Color.h: In constructor ‘WebCore::StyleBackgroundData::StyleBackgroundData()’: WebCore/platform/graphics/Color.h:81: warning: ‘this.9’ is used uninitialized in this function WebCore/platform/graphics/Color.h:81: note: ‘this.9’ was declared here make: *** [out/Release/obj.target/webcore_remaining/WebCore/rendering/style/StyleBackgroundData.o] Error 1
WebKit Review Bot
Comment 6 2010-11-29 13:49:29 PST
http://trac.webkit.org/changeset/72824 might have broken Chromium Linux Release
Tony Chang
Comment 7 2010-11-29 17:11:09 PST
(In reply to comment #5) > Meh, turning warnings off. Here's the error: > cc1plus: warnings being treated as errors > WebCore/platform/Length.h: In constructor ‘WebCore::FillLayer::FillLayer(WebCore::EFillLayerType)’: > WebCore/platform/Length.h:56: warning: ‘this.7’ is used uninitialized in this function > WebCore/platform/Length.h:56: note: ‘this.7’ was declared here > WebCore/platform/Length.h:56: warning: ‘this.7’ is used uninitialized in this function > WebCore/platform/Length.h:56: note: ‘this.7’ was declared here > make: *** [out/Release/obj.target/webcore_remaining/WebCore/rendering/style/FillLayer.o] Error 1 It looks like this is a compiler bug. I'm trying to find a reasonable workaround that isn't too gross. For example, in FillLayer.cpp, if I make the following change: @@ -27,8 +27,8 @@ namespace WebCore { FillLayer::FillLayer(EFillLayerType type) : m_next(0) , m_image(FillLayer::initialFillImage(type)) - , m_xPosition(FillLayer::initialFillXPosition(type)) - , m_yPosition(FillLayer::initialFillYPosition(type)) + , m_xPosition(Length(0.0, Percent)) + , m_yPosition(Length(0.0, Percent)) it works (where FillLayer::initialFillXPosition just returns Length(0.0, Percent)). Other options are to add a #pragma to the file to suppress the warning in gcc. Maybe that's less bad.
Note You need to log in before you can comment on or make changes to this bug.