2010-11-29  Tony Chang  <tony@chromium.org>

Reviewed by James Robinson.

        [chromium] try to enable WebCore compiler warnings on linux
        https://bugs.webkit.org/show_bug.cgi?id=50168

        * WebCore.gyp/WebCore.gyp:
        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::TextRunWalker::setPadding):
        (WebCore::TextRunWalker::setGlyphXPositions):
        (WebCore::glyphIndexForXPositionInScriptRun):

Canonical link: https://commits.webkit.org/63283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72824 268f45cc-cd09-0410-ab3c-d52691b4dbfc